[tool.poetry]
name = "connect4"
version = "0.1.0"
description = "Customizable Connect Four game with a bot using a minimax alpha-beta pruning algorithm with caching."
authors = ["Jakub Prítrský <jakub.prit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
